k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeappdeployment
  labels:
    type: backend
    app: nodeapp
spec: 
  replicas: 1
  selector:
    matchLabels:
      type: backend
      app: nodeapp
  template:
    metadata:
      name: nodeapppod
      labels:
        type: backend
        app: nodeapp
    spec:
      containers:
        - name: nodeappcontainer
          image: redakb/sample:test
          ports:
            - containerPort: 80
