k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /nodeapp
            pathType: Prefix
            backend:
              service:
                name: nodeapp-load-balancer-service
                port:
                  number: 80
